# wems

./: .env.example  .gitignore  BUILD.md  RELEASE_PROCESS.md  employee_manager.db.backup  pyproject.toml  wareflow-ems.spec
.claude/: settings.local.json
.claude/skills/flet-guide/: SKILL.md
.claude/skills/flet-guide/guides/: 01-introduction-to-flet.md  02-installation-and-setup.md  03-core-concepts.md  04-building-your-first-app.md  05-layouts-and-positioning.md  06-essential-controls.md  07-advanced-controls.md  08-dialogs-and-popups.md  09-navigation-and-routing.md  10-event-handling.md  11-state-management.md  12-theming-and-styling.md  13-async-applications.md  14-forms-and-validation.md  16-animations.md  (+15 more)
.github/workflows/: README.md  build.yml  ci.yml  pr-checks.yml  release.yml  test.yml
bootstrapper/: __init__.py
docs/: CLI_IMPLEMENTATION.md  MANUAL_TESTING_GUIDE.md  MIGRATION_GUIDE.md  PHASE_1_DETAILED.md  PHASE_2_DETAILED.md  PHASE_4_DETAILED.md  PHASE_5_SUMMARY.md  PROJECT.md  PROJECT_STRUCTURE.md  ROADMAP.md
logs/: .gitignore
scripts/: create_test_db.py  create_test_fixtures.py  migrate_add_contacts.py  validate_phase_0.py
src/: cli_main.py  employee_manager.py  main.py
src/bootstrapper/: wizard.py
src/cli/: __init__.py  __main__.py  caces.py  config.py  employee.py  lock.py  medical.py  report.py  rollback.py  training.py  upgrade.py  utils.py
src/controllers/: __init__.py  alerts_controller.py  dashboard_controller.py  employee_controller.py  export_controller.py
src/database/: connection.py  migration_model.py
src/database/migrations/: __init__.py  add_missing_indexes.py  base.py
src/employee/: alerts.py  calculations.py  constants.py  models.py  queries.py  validators.py
src/excel_import/: __init__.py  excel_importer.py  template_generator.py
src/export/: __init__.py  data_exporter.py  excel.py  templates.py
src/lock/: manager.py  models.py
src/reports/: contract_evolution.py
src/state/: __init__.py  app_state.py
src/ui/: app.py  constants.py  theme.py  theme_colors.py
src/ui/components/: __init__.py  buttons.py  cards.py  chips.py  feedback.py  icons.py  inputs.py
src/ui/layout/: __init__.py  app_shell.py
src/ui/navigation/: __init__.py  router.py  routes.py
src/ui/views/: alerts.py  dashboard.py  employee_detail.py  employee_form.py  employees.py
src/ui/views_new/: alerts.py  dashboard.py  documents.py  employee_detail.py  employee_form.py  employees.py  settings.py
src/ui/widgets/: navigation.py
src/ui_ctk/: app.py  constants.py  main_window.py
src/ui_ctk/forms/: base_form.py  caces_form.py  contract_form.py  employee_form.py  medical_form.py
src/ui_ctk/views/: __init__.py  alerts_view.py  backup_view.py  base_view.py  employee_detail.py  employee_list.py  import_view.py  login_view.py  placeholder.py  trash_view.py
src/utils/: backup_config.py  backup_manager.py  config.py  error_handler.py  file_validation.py  files.py  log.py  logging_config.py  performance_logger.py  security_logger.py  state_tracker.py  validation.py
tests/: conftest.py  test_backup_manager.py  test_data_exporter.py  test_database_indexes.py  test_email_validation.py  test_error_handler.py  test_exception_handling.py  test_export_controller.py  test_export_dialog.py  test_file_validation.py  test_logging_config.py  test_migration_model.py  test_migration_system.py  test_migrations.py  test_performance_logger.py  test_security_logger.py  test_validation.py
tests/fixtures/: empty_file.xlsx  invalid_data.xlsx  invalid_missing_column.xlsx  large_file.xlsx  valid_employees.xlsx
tests/test_cli/: test_commands.py
tests/test_employee/: test_alerts_integration.py  test_caces.py  test_contract_alerts.py  test_contracts.py  test_medical_visit.py  test_online_training.py  test_queries.py
tests/test_excel_import/: test_template_generator.py
tests/test_export/: test_enhanced_excel.py  test_excel.py
tests/test_integration/: test_relationships.py  test_validators_integration.py
tests/test_lock/: test_manager.py
tests/test_ui/: test_alerts_controller.py  test_theme.py
tests/test_utils/: test_backup_config.py  test_backup_logger.py  test_config.py  test_validation.py
